<resources>

    <string name="app_name">Pizzaria</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_principal">Pizzaria Controle</string>
    <string name="botaoCadastro">Cadastrar Pedido</string>
    <string name="botaoBusca">Finalizar Pedido</string> 
    <string name="botaoCliente">Cadastrar Cliente</string>
    <string name="botaoBusCliente">Buscar Cliente</string>
    <string name="botaochaCliente">Cliente</string>
    <string name="botaoCardapio">Cardapio</string>
    <string name="botaofinalizar">Finalizar Pedido</string>
    <string name="botaoCadCardapio">Cadastrar Produto</string>
    <string name="botaochaCardapio">Produto</string>
    <string name="menufinalizar">Finalizar Pedido</string>  
    <string name="menucontinuar">Continuar Pedido</string>
    <string name="menueditar">Editar</string>  
    <string name="menudeletar">Deletar</string>
    <string name="buscarproduto">Buscar Produto</string>      
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="endereco">Endereço</string>
    <string name="descricao">Descrição</string>
    <string name="preco">Preço</string>
    <string name="rua">Rua</string>
    <string name="bairro">Bairro</string>
    <string name="numero">Numero</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="limpar">Limpar</string>
    <string name="txtCliente">Cadastro de Clientes</string>
    <string name="txtProduto">Cadastro de Produtos</string>
    <string name="txtPedido">Fazer Pedido</string>
    <string name="cliente">Cliente:</string>
    <string name="item">Produto:</string>
    <string name="quantidade">Quantidade:</string>
    <string name="pedido">Pedido:</string>
    <string name="data">Data:</string>
    <string name="mesa">Mesa:</string>
    <string name="valor">Valor Conta:</string>
    <string name="TextoCardapio">cardapio da pizzaria tal numero tal bairro tal</string>
    <string-array name="spiner_mesa">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >9</item>
        <item >10</item>
    </string-array>
    
</resources>