<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCliente" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item" />

    <Spinner
		    android:id="@+id/produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantidade" />

    <EditText
        android:id="@+id/quantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
	<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpar" />

            <Button
                android:id="@+id/salvarItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:onClick="salvarItem" />
        </LinearLayout>
</LinearLayout>