<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp" 
        android:src="@drawable/app1"
        />

    <Button
        android:id="@+id/btCadCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btFuncChamaCliente"
        android:text="@string/botaochaCliente" />

    <Button
        android:id="@+id/btPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/botaoCadastro"
        android:onClick="btFuncPedido"
        />
    <Button
        android:id="@+id/btFinalizarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/botaoBusca"
        android:onClick="btFuncFinalizarPedido"
        />
    <Button
        android:id="@+id/btCadCardapio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/botaochaCardapio"
        android:onClick="btFuncChamarProduto"
        />
    <Button
        android:id="@+id/btCardapio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/botaoCardapio"
        android:onClick="btFuncCardapio"
        />
</LinearLayout>
