<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://shemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPedido" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente" />
		
		<Spinner
		    android:id="@+id/cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

       <!--  <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data" />

        <DatePicker
            android:id="@+id/datd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            /> -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mesa" />

        <Spinner
            android:id="@+id/mesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:onClick="Voltar_pedido" />

            <!-- <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpar" />
                 -->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:onClick="Salvar_pedido" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>