<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliente"
         />
    <TextView
        android:id="@+id/contacliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
         />
    <TextView
        android:id="@+id/contadata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
         />
    <TextView
        android:id="@+id/contavalor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

</LinearLayout>